--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,8 +28,8 @@
                   <img class="avatar-img" src="../../../../assets/images/img6.jpg" alt="">
                 </div>
                 <div class="flex-grow-1 ms-3">
-                  <h6>Mark Williams</h6>
-                  <div class="card-text text-body">mark@site.com</div>
+                  <h6>{{username}}</h6>
+                  <div class="card-text text-body">{{email}}</div>
                 </div>
               </div>
             </div>
