--- a/src/app/components/Requests/creates-request/creates-request.component.html
+++ b/src/app/components/Requests/creates-request/creates-request.component.html
@@ -1,1 +1,107 @@
-<p>creates-request works!</p>
+<div class="content container-fluid">
+
+  <div class="d-flex justify-content-center">
+
+    <div class="col-lg-8">
+      <div class="card shadow-sm animated flipInX delay-02">
+        <div class="card-header">
+          <div class="card-header-title">Customer Request</div>
+        </div>
+        <div class="card-body">
+          <div *ngIf="uiState.isSuccess" class="alert alert-success" role="alert">
+            Request Completed Successfully"
+          </div>
+        <form [formGroup]="createRequestForm" (ngSubmit)="createRequest()">
+          <div class="row">
+            <div class="col-sm-6">
+              <label>Customer Name</label>
+              <div class="mb-4">
+                <input type="text" class="form-control" formControlName="customerName">
+                  <div class="v-message"
+                    *ngIf="(uiState.isSubmitting && createRequestForm.get('customerName')?.hasError('required')
+                         || createRequestForm.get('customerName')?.touched && createRequestForm.get('customerName')?.hasError('required'))">
+                    <span> Customer Name is <strong>required</strong></span>
+                  </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <label>Email</label>
+              <div class="mb-4">
+                <input type="text" class="form-control" formControlName="email">
+                <div class="v-message"
+                  *ngIf="(uiState.isSubmitting && createRequestForm.get('email')?.hasError('required')
+                                         || createRequestForm.get('email')?.touched && createRequestForm.get('email')?.hasError('required'))">
+                  <span> Email is <strong>required</strong></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <label>Mobile</label>
+              <div class="mb-4">
+                <input type="text" class="form-control" formControlName="mobile">
+                <div class="v-message"
+                  *ngIf="(uiState.isSubmitting && createRequestForm.get('mobile')?.hasError('required')
+                                         || createRequestForm.get('mobile')?.touched && createRequestForm.get('mobile')?.hasError('required'))">
+                  <span> Mobile Name is <strong>required</strong></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <label>EID</label>
+              <div class="mb-4">
+                <input type="text" class="form-control" formControlName="eid">
+                <div class="v-message"
+                  *ngIf="(uiState.isSubmitting && createRequestForm.get('eid')?.hasError('required')
+                                                         || createRequestForm.get('eid')?.touched && createRequestForm.get('eid')?.hasError('required'))">
+                  <span> Eid  is <strong>required</strong></span>
+                </div>
+              </div>
+            </div>
+              <div class="col-sm-12">
+                <label>Trade License</label>
+                <div class="mb-4">
+                  <input type="text" class="form-control" formControlName="tradeLicense">
+                  <div class="v-message"
+                    *ngIf="(uiState.isSubmitting && createRequestForm.get('tradeLicense')?.hasError('required')
+                                                           || createRequestForm.get('tradeLicense')?.touched && createRequestForm.get('tradeLicense')?.hasError('required'))">
+                    <span> Trade License is <strong>required</strong></span>
+                  </div>
+                </div>
+              </div>
+            <div class="col-sm-6">
+              <label>Authorised Person</label>
+              <div class="mb-4">
+                <input type="text" class="form-control" formControlName="authorisedPerson">
+                    <div class="v-message"
+                      *ngIf="(uiState.isSubmitting && createRequestForm.get('authorisedPerson')?.hasError('required')
+                                                                               || createRequestForm.get('authorisedPerson')?.touched && createRequestForm.get('authorisedPerson')?.hasError('required'))">
+                      <span> Authorised Person is <strong>required</strong></span>
+                    </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <label>Campaign Content</label>
+              <div class="mb-4">
+                <input type="text" class="form-control" formControlName="campaignContent">
+                    <div class="v-message"
+                      *ngIf="(uiState.isSubmitting && createRequestForm.get('campaignContent')?.hasError('required')
+                                                                               || createRequestForm.get('campaignContent')?.touched && createRequestForm.get('campaignContent')?.hasError('required'))">
+                      <span> Campaign Content is <strong>required</strong></span>
+                    </div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-end gap-3">
+              <button type="submit" [disabled]="uiState.isLoading" class="btn btn-primary">
+                <div *ngIf="uiState.isLoading" class="spinner-grow spinner-grow-sm">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <span *ngIf="!uiState.isLoading">Create</span>
+              </button>
+            </div>
+          </div>
+        </form>
+
+        </div>
+      </div>
+    </div>
+  </div>
