--- a/src/app/components/auth/sign-in/sign-in.component.html
+++ b/src/app/components/auth/sign-in/sign-in.component.html
@@ -1,12 +1,12 @@
 <main id="content" role="main" class="main">
   <div class="position-fixed top-0 end-0 start-0 bg-img-start"
-    style="height: 100%; background-color: aliceblue;">
+    style="height: 100%; ">
   </div>
 
   <!-- Content -->
   <div class="container py-5 py-sm-7">
     <a class="d-flex justify-content-center mb-5" href="index.html">
-      <img class="zi-2" src="../../../../assets/svg/card-6.svg" alt="Image Description" style="width: 8rem;">
+      <img class="zi-2" src="../../../../assets/eand.png" alt="Image Description" style="width: 15rem;">
     </a>
 
     <div class="mx-auto" style="max-width: 30rem;">
