--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -1,14 +1,13 @@
 <main id="content" role="main" class="main">
-  <div class="position-fixed top-0 end-0 start-0 bg-img-start" style="height: 100%; background-color: aliceblue;">
+  <div class="position-fixed top-0 end-0 start-0 bg-img-start" style="height: 100%; ">
   </div>
 
   <!-- Content -->
   <div class="container py-5 py-sm-7">
     <a class="d-flex justify-content-center mb-5">
-      <img class="zi-2" alt="Image Description" style="width: 8rem;">
+      <img class="zi-2" src="../../../../assets/eand.png" alt="Image Description" style="width: 13rem;">
     </a>
-
-    <div class="mx-auto" style="max-width: 30rem;">
+    <div class="mx-auto" style="max-width: 35rem;">
       <!-- Card -->
       <div class="card card-lg mb-5">
         <div class="card-body">
@@ -29,7 +28,7 @@
                 <!-- First name conttrol -->
                 <div class="mb-4">
                   <input type="text" class="form-control form-control-lg" formControlName="firstName"
-                    placeholder="Mark">
+                    placeholder="First Name">
                   <span class="invalid-feedback">Please enter your first name.</span>
                   <div class="v-message"
                     *ngIf="(uiState.isSubmitting && signUpFormGroup.get('firstName')?.hasError('required')
@@ -43,7 +42,7 @@
                 <!-- Last Name Control -->
                 <div class="mb-4">
                   <input type="text" class="form-control form-control-lg" formControlName="lastName"
-                    placeholder="Williams">
+                    placeholder="last Name">
                   <!-- Last Name message validation -->
                   <div class="v-message"
                     *ngIf="(uiState.isSubmitting && signUpFormGroup.get('lastName')?.hasError('required')
@@ -56,7 +55,7 @@
 
             <!-- Email Control -->
             <div class="mb-4">
-              <label class="form-label" for="signupSrEmail">Your email</label>
+              <label class="form-label" for="signupSrEmail">E-mail</label>
               <input type="email" class="form-control form-control-lg" formControlName="email"
                 placeholder="Markwilliams@site.com">
               <!-- Email message validation -->
@@ -90,25 +89,21 @@
               </div>
             </div>
 
-            <!-- Confirm password Control -->
             <div class="mb-4">
-              <label class="form-label" for="signupSrConfirmPassword">Confirm password</label>
+              <label class="form-label" for="signupSrPassword">Phone Number</label>
               <div class="input-group input-group-merge">
-                <input type="password" class="form-control form-control-lg" formControlName="confirmPassword"
-                  placeholder="8+ characters required">
+                <input type="number" class="form-control form-control-lg" minlength="8" formControlName="phoneNumber"
+                  placeholder="971000000">
               </div>
-              <!-- Confirm Password message validation -->
-              <div class="v-message"
-                *ngIf="(uiState.isSubmitting && signUpFormGroup.get('confirmPassword')?.hasError('required')
-                || signUpFormGroup.get('confirmPassword')?.touched && signUpFormGroup.get('confirmPassword')?.hasError('required'))">
-                <span> Confirm password is <strong>required</strong></span>
-              </div>
+              <!-- Password message validation -->
               <div
-                *ngIf="(uiState.isSubmitting && signUpFormGroup.get('confirmPassword')?.hasError('matching')
-                || signUpFormGroup.get('confirmPassword')?.touched && signUpFormGroup.get('confirmPassword')?.hasError('matching'))">
-                <span class="v-message">Passwords do not match.</span>
+                *ngIf="(uiState.isSubmitting && signUpFormGroup.get('phoneNumber')?.hasError('required')
+                               || signUpFormGroup.get('phoneNumber')?.touched && signUpFormGroup.get('phoneNumber')?.hasError('required'))">
+                <span class="v-message"> Password is <strong>required</strong></span>
               </div>
             </div>
+
+
 
             <!-- On submit -->
             <div class="d-grid" [class.grid]="uiState.isLoading">
