--- a/src/app/components/Requests/admin-list/admin-list.component.scss
+++ b/src/app/components/Requests/admin-list/admin-list.component.scss
@@ -4,3 +4,11 @@
     justify-content: space-between;
     gap: .5rem
   }
+.request-details{
+
+}
+
+.request-details:hover{
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
