--- a/src/app/components/Requests/super-admin-list/super-admin-list.component.html
+++ b/src/app/components/Requests/super-admin-list/super-admin-list.component.html
@@ -1,6 +1,8 @@
 <div class="tabel-header py-3">
   <div class="mb-2 mb-md-0">
-    Super Admin Approval
+    <div class="display-5">
+      Super Admin Approval
+    </div>
   </div>
   <div class="d-grid d-sm-flex gap-2">
   </div>
@@ -20,7 +22,7 @@
   </thead>
   <tbody>
     <tr *ngFor="let item of requestlist">
-      <td>
+    <td class="request-details" [routerLink]="['/superadmin-request-details/', item.userId]">
         <div>{{item.customerName}}</div>
       </td>
       <td>
